<resources>
    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="username">Username:</string>
    <string name="usernameHint">Please enter your username</string>

    <string name="password">Password:</string>
    <string name="passwordHint">Please enter your password</string>

    <string name="confirmation">Confirm Password:</string>
    <string name="confirmationHint">Please confirm your password</string>

    <string name="submit">SUBMIT</string>
</resources>

